tests/errors/unterminated_string.vhpt
--TEST--
Unterminated string error
--DESCRIPTION--
Tests that unterminated strings produce an error
--FILE--
<?php
echo "unterminated;
--EXPECT_ERROR--
Unterminated string
